--- a/projects/guptaso/Assignment-1/write-up/assignment1.tex
+++ b/projects/guptaso/Assignment-1/write-up/assignment1.tex
@@ -1,4 +1,5 @@
 \documentclass[12pt]{article} 
+\usepackage{hyperref}
 
 \title{Assignment 1}
 \author{Sonica Gupta (guptaso) } 
@@ -6,6 +7,7 @@
 \begin{document}
 
 \maketitle 
+\centerline{\url{{https://github.com/guptaso/CS362-001-S2018/tree/guptaso-assignment-1/projects/guptaso/Assignment-1}}}
 \tableofcontents
 
 \section{Program Description}
